--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
 VITE_GOOGLE_PLACE_API_KEY=AIzaSyAcp_X4OLkqvUyumzYOX-DmF4Z2HWowBjM
 VITE_GOOGLE_GEMINI_API_KEY=AIzaSyBOJ2KZnJ7LexjgLNRS9GLLD40lSKGCXnE
 VITE_GOOGLE_AUTH_CLIENT_ID=545198356745-cn1u9qhjkh63la529541q0r4f94mu0h5.apps.googleusercontent.com
+BACKEND_API_ENDPOINT=http://localhost:8000/
