--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-google-places-autocomplete": "^4.1.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
